Remove of monitor-* Maven modules, Rename to RuntimeObject, WatcherService and configurable JFR and JMX.